Adding details in notebook

--- a/Audio_Dcase_DNN_Baseline/mainfile.ipynb
+++ b/Audio_Dcase_DNN_Baseline/mainfile.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DCASE 2016 DNN Baseline\n",
+    "In this notebook, we implement the **Detection and Classification of Acoustic Scenes and Events challenge** 2016."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Suppress warnings**: We need to supress warnings as we are going to use some sunctionality of an older version of *scikit-learn*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
@@ -13,15 +28,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## keras_aud library\n",
+    "Clone [keras_aud](https://github.com/channelCS/keras_aud) and place the **path** in *ka_path* variable so that we can import modules."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, 'E:/akshita_workspace/cc')\n",
+    "ka_path=\"your/path/here\"\n",
+    "sys.path.insert(0, ka_path)\n",
     "from keras_aud import aud_audio, aud_feature\n",
     "from keras_aud import aud_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Make imports**: We now import libraries which shall be required in this task. We use\n",
+    "1. `csv` for reading `.csv` files.\n",
+    "2. `cPickle` for reading `.f` pickle files.\n",
+    "3. `scipy` for calculating `mode`\n",
+    "4. `time` for calciulating *time to load* pickle files.\n",
+    "5. `KFold` for kfold cross validation.\n",
+    "6. `to_categorical` for reshaping *labels* into `num_classes`.\n",
+    "7. `load_model` for loading a saved model."
    ]
   },
   {
@@ -43,19 +81,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "table {float:left}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "table {float:left}\n",
+    "</style>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Define paths**: We now tell the paths for **audio**, **features** and **texts**.\n",
+    "\n",
+    "| Variable        | Description                     |\n",
+    "| :-------------  |:-------------                   |\n",
+    "| `wav_dev_fd`    | Development audio folder        |\n",
+    "| `wav_eva_fd`    | Evaluation audio folder         |\n",
+    "| `dev_fd`        | Development features folder     |\n",
+    "| `eva_fd`        | Evaluation features folder      |\n",
+    "| `label_csv`     | Development meta file           |\n",
+    "| `txt_eva_path`  | Evaluation test file            |\n",
+    "| `new_p`         | Evaluation evaluate file        |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "wav_dev_fd   = 'E:/akshita_workspace/dcase_data/audio/dev'\n",
-    "wav_eva_fd   = 'E:/akshita_workspace/dcase_data/audio/eva'\n",
-    "dev_fd       = 'E:/akshita_workspace/cc/features/Fe/logmel'\n",
-    "eva_fd       = 'E:/akshita_workspace/cc/features/Fe_eva/logmel'\n",
-    "label_csv    = 'E:/akshita_workspace/dcase_data/texts/development/meta.txt'\n",
-    "txt_eva_path = 'E:/akshita_workspace/dcase_data/texts/evaluation/test.txt'\n",
-    "new_p        = 'E:/akshita_workspace/dcase_data/texts/evaluation/evaluate.txt'"
+    "wav_dev_fd   = 'audio/dev'\n",
+    "wav_eva_fd   = 'audio/eva'\n",
+    "dev_fd       = 'features/Fe/logmel'\n",
+    "eva_fd       = 'features/Fe_eva/logmel'\n",
+    "label_csv    = 'texts/development/meta.txt'\n",
+    "txt_eva_path = 'texts/evaluation/test.txt'\n",
+    "new_p        = 'texts/evaluation/evaluate.txt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Define Labels**: We give the names of all the labels in the dataset"
    ]
   },
   {
@@ -70,6 +159,18 @@
     "            'library', 'metro_station', 'office', 'residential_area', 'train', 'tram', 'park' ]\n",
     "lb_to_id = { lb:id for id, lb in enumerate(labels) }\n",
     "id_to_lb = { id:lb for id, lb in enumerate(labels) }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract features\n",
+    "This is where feature extraction takes place. We pass the\n",
+    "1. Feature name such as mel, logmel, mfcc.\n",
+    "2. Folder containing audios\n",
+    "3. Folder where features will be extracted\n",
+    "4. A yaml file containing parameters for features."
    ]
   },
   {
@@ -91,6 +192,40 @@
    "source": [
     "aud_audio.extract('logmel', wav_dev_fd, dev_fd,'example.yaml')\n",
     "aud_audio.extract('logmel', wav_eva_fd, eva_fd,'example.yaml')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Parameters\n",
+    "We define all model parameters here.\n",
+    "\n",
+    "| Variable           | Description              | type       | Accepted values             |\n",
+    "| :-------------     | :-------------           | :--------- | :---------                  |\n",
+    "| `prep`             | mode to use              | `str`      | dev, eval                   |\n",
+    "| `save_model`       | Whether to save model    | `bool`     |                             |\n",
+    "| `model_type`       | Type of model            | `str`      | Dynamic, Functional, Static |\n",
+    "| `model`            | Name of model            | `str`      | DNN, CNN, CRNN, RNN, FCRNN  |\n",
+    "| `modelx`           | Name of model for saving | `str`      | Should end with `.h5`       |\n",
+    "| `feature`          | Name of feature          | `str`      | mel, logmel, cqt, mfcc, zcr |\n",
+    "|<td colspan=2 style=\"text-align:center\">**Works only for Functional**</td>|||\n",
+    "| `dropout1`         | 1st Dropout              | `float`    |                             |\n",
+    "| `act1`             | 1st Activation           | `str`      |                             |\n",
+    "| `act2`             | 2nd Activation           | `str`      |                             |\n",
+    "| `act3`             | 3rd Activation           | `str`      |                             |\n",
+    "| `act4`             | 4th Activation           | `str`      | Only in case of DNN         |\n",
+    "|<td colspan=2 style=\"text-align:center\">**Works for all Models**</td>|||\n",
+    "| `input_neurons`    | Number of Neurons        | `int`      |                             |\n",
+    "| `epochs`           | Number of Epochs         | `int`      |                             |\n",
+    "| `batchsize`        | Batch Size               | `int`      |                             |\n",
+    "| `num_classes`      | Number of classes        | `int`      |                             |\n",
+    "| `filter_length`    | Size of Filter           | `int`      |                             |\n",
+    "| `nb_filter`        | Number of Filters        | `int`      |                             |\n",
+    "|<td colspan=2 style=\"text-align:center\">**Feature Parameters**</td>|||\n",
+    "| `agg_num`          | Number of frames         | `int`      |                             |\n",
+    "| `hop`              | Hop Length               | `int`      |                             |\n",
+    "| `custom_check_ftr` | check for dimensions     | `bool`     | True: know dimension        |\n"
    ]
   },
   {
