Updating details in notebook

--- a/Audio_Dcase_DNN_Baseline/mainfile.ipynb
+++ b/Audio_Dcase_DNN_Baseline/mainfile.ipynb
@@ -80,33 +80,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "table {float:left}\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<style>\n",
-    "table {float:left}\n",
-    "</style>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,20 +182,20 @@
     "| `model`            | Name of model            | `str`      | DNN, CNN, CRNN, RNN, FCRNN  |\n",
     "| `modelx`           | Name of model for saving | `str`      | Should end with `.h5`       |\n",
     "| `feature`          | Name of feature          | `str`      | mel, logmel, cqt, mfcc, zcr |\n",
-    "|<td colspan=2 style=\"text-align:center\">**Works only for Functional**</td>|||\n",
+    "|**Works only for Functional**| | |\n",
     "| `dropout1`         | 1st Dropout              | `float`    |                             |\n",
     "| `act1`             | 1st Activation           | `str`      |                             |\n",
     "| `act2`             | 2nd Activation           | `str`      |                             |\n",
     "| `act3`             | 3rd Activation           | `str`      |                             |\n",
     "| `act4`             | 4th Activation           | `str`      | Only in case of DNN         |\n",
-    "|<td colspan=2 style=\"text-align:center\">**Works for all Models**</td>|||\n",
+    "|**Works for all Models**|||\n",
     "| `input_neurons`    | Number of Neurons        | `int`      |                             |\n",
     "| `epochs`           | Number of Epochs         | `int`      |                             |\n",
     "| `batchsize`        | Batch Size               | `int`      |                             |\n",
     "| `num_classes`      | Number of classes        | `int`      |                             |\n",
     "| `filter_length`    | Size of Filter           | `int`      |                             |\n",
     "| `nb_filter`        | Number of Filters        | `int`      |                             |\n",
-    "|<td colspan=2 style=\"text-align:center\">**Feature Parameters**</td>|||\n",
+    "|**Feature Parameters**|||\n",
     "| `agg_num`          | Number of frames         | `int`      |                             |\n",
     "| `hop`              | Hop Length               | `int`      |                             |\n",
     "| `custom_check_ftr` | check for dimensions     | `bool`     | True: know dimension        |\n"
